<resources>
    <string name="app_name">iClaim</string>
    <string name="title_text">Reimbursement</string>
    <string name="billsImage">Bills</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password_hint</string>
    <string name="login_text">login_text</string>
    <string name="password">password</string>
    <string name="or_text">or</string>
    <string name="create_account_button">create_account_button</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="passwrd">Password</string>
    <string name="logintext">Login</string>
    <string name="login">Create Account</string>
    <string name="username_hint">User name</string>
    <string name="title_activity_post_bill">PostBillActivity</string>
    <string name="title_hint">Title</string>
    <string name="bills">Details of your bills</string>
    <string name="save_button">Save</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="menu_title">Add Bills</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Add a bill entry by clicking the "+" sign</string>
    <string name="username_textview_hint">username</string>
    <string name="headpostactivity">New Bill Claim</string>
    <string name="detectedtexthint">Total Amount</string>
    <string name="welcometextview">Welcome</string>
    <string name="balance_text">Balance Remaining:</string>
    <string name="amount_text">Amount</string>
    <string name="billbutton">View Bills</string>
    <string name="buttonadd">New Claim</string>
    <string name="annualamt_text">Annual Balance</string>
    <string name="value_text">500.00</string>

     <string name="edit_hint">Plz add conversation..</string>
    <string name="speech_prompt">Plz use Voice..</string>
    <string name="speech_not_supported">Voice Support not available..</string>
    <string name="repeat">Sry plz say it again..</string>
    <string name="enter">Plz enter text</string>
    
</resources>